--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="panel">
           <ul class="contact">
             <li><i class="fa-solid fa-location-dot"></i> <span data-i18n="contact_loc">Verneuil‑sur‑Seine (78480), Île‑de‑France</span></li>
-            <li><i class="fa-solid fa-phone"></i> <a href="tel:+33758080294">+33 7 58 08 02 94</a></li>
+            <li><i class="fa-solid fa-envelope"></i> <a href="mailto:happybadly@gmail.com">happybadly@gmail.com</a></li>
             <li><i class="fa-solid fa-envelope"></i> <a href="mailto:luberissebadly@yahoo.fr">luberissebadly@yahoo.fr</a></li>
             <li><i class="fa-solid fa-id-card"></i> <span data-i18n="contact_permis">Permis B</span></li>
           </ul>
